<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".AddProfile">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/endTime"
            android:inputType="time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="195dp"
            android:layout_alignEnd="@id/moneyProfil"
            android:background="@drawable/form_text"
            android:fontFamily="@font/century_gothic"
            android:hint="@string/endTime"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:elevation="10dp"/>

        <EditText
            android:id="@+id/startTime"
            android:inputType="time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/form_text"
            android:fontFamily="@font/century_gothic"
            android:hint="@string/startTime"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:elevation="10dp"/>

        <EditText
            android:id="@+id/nomProfil"
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/form_text"
            android:fontFamily="@font/century_gothic"
            android:hint="@string/nomProfile"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:elevation="10dp"/>

        <EditText
            android:id="@+id/moneyProfil"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="65dp"
            android:inputType="numberDecimal"
            android:background="@drawable/form_text"
            android:fontFamily="@font/century_gothic"
            android:hint="@string/moneyProfile"
            android:textColorHint="@color/hint"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:elevation="10dp"/>

        <Button
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:background="@drawable/validate_button"
            android:fontFamily="@font/century_gothic"
            android:onClick="onClickValidate"
            android:text="@string/valider"
            android:textColor="@color/text"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/century_gothic"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/descBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />
</androidx.constraintlayout.widget.ConstraintLayout>