<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Profile">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/century_gothic"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/descBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageButton
        android:id="@+id/addProfile"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:background="@null"
        android:contentDescription="@string/descAddButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_button" />
</androidx.constraintlayout.widget.ConstraintLayout>