<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/century_gothic"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ProfileButton"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:background="@null"
        android:contentDescription="@string/descProfilBouton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/account_button" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextClock
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/Money"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:fontFamily="@font/century_gothic"
            android:format24Hour="dd/MM/yyyy k:mm:ss"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Money"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:autoSizeTextType="uniform"
            android:background="@drawable/bg_text"
            android:elevation="10dp"
            android:fontFamily="@font/century_gothic"
            android:text="@string/money"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="50sp" />

       <!-- <TextClock
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/validate_button"
            android:format24Hour="hh:mm:ss"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:elevation="10dp"/>-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="105dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>